<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colors and Styles</string>
    <string name="action_settings">Settings</string>
    
    <string name="item_style">Item Styling</string>
    <string name="theme1">Holo Dark</string>
    <string name="theme2">Custom Theme Style</string>
    
    <string name="push">Push Me!</string>
    <string name="next_style">Next Style</string>
    <string name="more">More Custom Style</string>
    
    <string name="standard_text">Standard Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="large_text">Large Text</string>

</resources>
