<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ColorsAndStyles" >
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <LinearLayout
        android:orientation="vertical"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent" >

    <TextView android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_text" />

    <TextView android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="21dp"
        android:text="@string/medium_text"
        android:textColor="@color/green"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:text="@string/large_text"
        android:textColor="@color/darkred"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/push"
        android:textColor="#cc00dd"
        android:onClick="click1" />
    
    <Button android:id="@+id/button2"
        android:background="@drawable/button_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/next_style"
        android:textColor="#00ff00"
        android:onClick="click2" />
    
    </LinearLayout>
    </ScrollView>

</RelativeLayout>